# brick

./: .gitignore  .travis.yml  CHANGELOG.md  FAQ.md  LICENSE  README.md  TODO.txt  brick.cabal  cabal.config  cabal.haskell-ci  cabal.project  cabal.project.local  stack.yaml
.github/workflows/: haskell-ci.yml
docs/: .gitignore  Makefile  guide.rst  index.rst  programs-screenshots.md  samtay-tutorial.md
logo/: LOGO.txt
programs/: AnimationDemo.hs  AttrDemo.hs  BananaDemo.hs  Bench.hs  BorderDemo.hs  CacheDemo.hs  CroppingDemo.hs  CustomEventDemo.hs  CustomKeybindingDemo.hs  DialogDemo.hs  DynamicBorderDemo.hs  EditDemo.hs  EditorLineNumbersDemo.hs  Events.hs  FileBrowserDemo.hs  FillDemo.hs  FormDemo.hs  HelloWorldDemo.hs  LayerDemo.hs  ListDemo.hs  ListDemoVi.hs  ListViDemo.hs  Main.hs  MarkupDemo.hs  Minimal.hs  MouseDemo.hs  PaddingDemo.hs  ProgressBarDemo.hs  ReadmeDemo.hs  Rogue.hs  SuspendAndResumeDemo.hs  TableDemo.hs  TabularListDemo.hs  TailDemo.hs  TextWrapDemo.hs  ThemeDemo.hs  ViewportScrollDemo.hs  ViewportScrollbarsDemo.hs  VisibilityDemo.hs  custom_keys.ini
scripts/: upload-docs.sh
src/: Brick.hs
src/Brick/: Animation.hs  AttrMap.hs  BChan.hs  Border.hs  BorderMap.hs  Center.hs  Core.hs  Edit.hs  Focus.hs  Forms.hs  Keybindings.hs  List.hs  Main.hs  MainBanana.hs  Markup.hs  Merge.hs  Prim.hs  Render.hs  Scroll.hs  Themes.hs  Types.hs  Util.hs
src/Brick/Animation/: Clock.hs
src/Brick/Border/: Style.hs
src/Brick/Keybindings/: KeyConfig.hs  KeyDispatcher.hs  KeyEvents.hs  KeyHandlerMap.hs  Normalize.hs  Parse.hs  Pretty.hs
src/Brick/Prim/: Internal.hs
src/Brick/Render/: Internal.hs
src/Brick/Types/: Common.hs  EventM.hs  Internal.hs  TH.hs
src/Brick/Widgets/: Border.hs  Center.hs  Core.hs  Dialog.hs  Edit.hs  FileBrowser.hs  Internal.hs  List.hs  ProgressBar.hs  Radio.hs  Table.hs
src/Brick/Widgets/Border/: Style.hs
src/Data/: BorderMap.hs  IMap.hs
src/Data/Text/: Markup.hs
test/: ListTest.hs  TestDriver.hs
tests/: List.hs  Main.hs  Render.hs
