name:                brick
version:             0.47.1
synopsis:            A declarative terminal user interface library
description:
  Write terminal applications painlessly with 'brick'! You write an
  event handler and a drawing function and the library does the rest.
  .
  .
  > module Main where
  >
  > import Brick
  >
  > ui :: Widget ()
  > ui = str "Hello, world!"
  >
  > main :: IO ()
  > main = simpleMain ui
  .
  .
  To get started, see:
  .
  * <https://github.com/jtdaugherty/brick/blob/master/README.md The README>
  .
  * The <https://github.com/jtdaugherty/brick/blob/master/docs/guide.rst Brick user guide>
  .
  * The demonstration programs in the 'programs' directory
  .
  .
  This package deprecates <http://hackage.haskell.org/package/vty-ui vty-ui>.
license:             BSD3
license-file:        LICENSE
author:              Jonathan Daugherty <cygnus@foobox.com>
maintainer:          Jonathan Daugherty <cygnus@foobox.com>
copyright:           (c) Jonathan Daugherty 2015-2018
category:            Graphics
build-type:          Simple
cabal-version:       1.18
Homepage:            https://github.com/jtdaugherty/brick/
Bug-reports:         https://github.com/jtdaugherty/brick/issues
tested-with:         GHC == 8.0.2, GHC == 8.2.2, GHC == 8.4.1, GHC == 8.6.5

extra-doc-files:     README.md,
                     docs/guide.rst,
                     docs/samtay-tutorial.md,
                     docs/snake-demo.gif,
                     CHANGELOG.md

Source-Repository head
  type:     git
  location: git://github.com/jtdaugherty/brick.git

Flag demos
    Description:     Build demonstration programs
    Default:         False

library
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-unused-do-bind -O3
  default-extensions:  CPP
  hs-source-dirs:      src
  exposed-modules:
    Brick
    Brick.AttrMap
    Brick.BChan
    Brick.BorderMap
    Brick.Focus
    Brick.Forms
    Brick.Main
    Brick.Markup
    Brick.Themes
    Brick.Types
    Brick.Util
    Brick.Widgets.Border
    Brick.Widgets.Border.Style
    Brick.Widgets.Center
    Brick.Widgets.Core
    Brick.Widgets.Dialog
    Brick.Widgets.Edit
    Brick.Widgets.FileBrowser
    Brick.Widgets.List
    Brick.Widgets.ProgressBar
    Data.IMap
    Data.Text.Markup
  other-modules:
    Brick.Types.Common
    Brick.Types.TH
    Brick.Types.Internal
    Brick.Widgets.Internal

  build-depends:       base <= 4.12.0.0,
                       vty >= 5.24,
                       transformers,
                       data-clist >= 0.1,
                       directory >= 1.2.5.0,
                       dlist,
                       filepath,
                       containers >= 0.5.7,
                       microlens >= 0.3.0.0,
                       microlens-th,
                       microlens-mtl,
                       config-ini,
                       vector,
                       contravariant,
                       stm >= 2.4,
                       text,
                       text-zipper >= 0.7.1,
                       template-haskell,
                       deepseq >= 1.3 && < 1.5,
                       unix,
                       word-wrap >= 0.2
  if impl(ghc < 8.0)
    build-depends:     semigroups
